# QC1

./: .gitignore  CrossValidation.ipynb  DNN.ipynb  README.md  RandomAnsatz_Noise_Comparison.ipynb  ansatz.ipynb  ansatz_comparison.ipynb  class.py  class_cleaned.ipynb  classical_ml.ipynb  comparison_odra_simulator.ipynb  dane.ipnyb  dane.ipynb  dnn.ipynb  eda.ipynb  hipoteza_karina.ipynb  hipoteza_model_z_data_encoding.ipynb  iwo_and_michal_combined.ipynb  main.tex  model (1).ipynb  model.ipynb  model_evaluation.ipynb  model_mery 2.ipynb  model_odra.ipynb  model_odra_adapted_ansatz.ipynb  model_odra_adapted_ansatz_checkpoint_testest.ipynb  model_odra_adapted_ansatz_withgates  model_odra_timestamps.ipynb  model_odra_timestamps2.ipynb  model_odra_timestamps_withgates  model_simulator.ipynb  model_symulator.ipynb  model_z_data_encoding.ipynb  notatki_ze_spotkania 2.txt  odra_weights_depth_2.pth  project.md  project1.py  pyproject.toml  qc_final.ipynb  quantum_best_weights.pth  (+13 more)
.ipynb_checkpoints/: CrossValidation-checkpoint.ipynb  eda-checkpoint.ipynb  model-checkpoint.ipynb  model_odra-checkpoint.ipynb  model_odra_timestamps-checkpoint.ipynb
CV_stary_ansatz2/: raport.md
CrossValidation/: CrossValidation.ipynb
cross_validation/: CrossValidation.ipynb  CrossValidation_Noise.ipynb  raport.md  results.ipynb
depth2/: model_checkpoint_epoch_22.pth
depth4/: model_checkpoint_epoch_27.pth  testset.csv
depth6/: model_checkpoint_epoch_29.pth
depth8/: model_checkpoint_epoch_28.pth
evaluation_and_comparison/: LED.ipynb  all_folds_evaluation.ipynb  ansatz_comparison.ipynb  (+7 more)
(+639 files in other folders)
